--- a/css/oreStyles.css
+++ b/css/oreStyles.css
@@ -4,6 +4,22 @@
     box-sizing: border-box;
 }
 
+/* navbar and hero style */
+
+.hero-head {
+    background: url(/mavdavis-img/hero-bg.png) no-repeat center;
+    background-size: cover;
+}
+
+.hero-paragraph {
+    color: black;
+}
+
+.left-section {
+    width: 80%;
+    margin: 0 auto;
+}
+
 #partner-section {
     background: linear-gradient(179.91deg, rgba(255, 255, 255, 0) 17.3%, rgba(255, 255, 255, 0.05) 99.92%), #B91869;
     min-height: 70vh;
