my first section 6 and 7 coomit

--- a/css/oreStyles.css
+++ b/css/oreStyles.css
@@ -160,7 +160,7 @@ event style */
         height: 6% !important; */
  }
  @media screen and (max-width:1024px){
-    .d-flex{
+    .dd-flex{
         flex-direction: column!important;
     }
     
@@ -188,7 +188,7 @@ event style */
 
  /* for tab */
  @media screen and (max-width:769px){
-    .d-flex{
+    .dd-flex{
         flex-direction: column!important;
     }
     
@@ -217,7 +217,7 @@ event style */
 }
 
 @media  screen and (max-width: 426px) {
-    .d-flex{
+    .dd-flex{
         flex-direction: column!important;
     }
 
@@ -249,7 +249,7 @@ event style */
 }
 
 @media screen and (max-width:376px){
-    .d-flex{
+    .dd-flex{
         flex-direction: column!important;
     }
 
@@ -280,7 +280,7 @@ event style */
 }
 
     @media (max-width:322px){
-        .d-flex{
+        .dd-flex{
             flex-direction: column!important;
         }
     
