--- a/css/oreStyles.css
+++ b/css/oreStyles.css
@@ -7,7 +7,7 @@
 /* navbar and hero style */
 
 .hero-head {
-    background: linear-gradient(to bottom, rgba(167, 38, 105, 0.616), rgba(167, 38, 105, 0.741)), url(/mavdavis-img/muktano-main-incentive.png) no-repeat center;
+    background: linear-gradient(to bottom, rgba(167, 38, 105, 0.616), rgba(167, 38, 105, 0.741)), url(../mavdavis-img/muktano-main-incentive.png) no-repeat center;
     background-size: cover;
 }
 
@@ -73,7 +73,7 @@ event style */
 }
 
 .gradient-bk {
-    background-image: linear-gradient(360deg, #329472 -0.07%, #45CB9C 10.08%, rgba(71, 255, 99, 0.5)), url(../section3img/Mkutano.png);
+    background-image: linear-gradient(360deg, #329472 -0.07%, #45CB9C 10.08%, rgba(71, 255, 99, 0.5)), url(../Ore-img/Mkutano.png);
     font-family: 'Montserrat', sans-serif;
     background-position: center;
     background-repeat: no-repeat;
