--- a/css/oreStyles.css
+++ b/css/oreStyles.css
@@ -7,7 +7,7 @@
 /* navbar and hero style */
 
 .hero-head {
-    background: linear-gradient(to bottom, rgba(167, 38, 105, 0.616), rgba(167, 38, 105, 0.741)), url(../mavdavis-img/muktano-main-incentive.png) no-repeat center;
+    background-image: linear-gradient(to bottom, rgba(167, 38, 105, 0.616), rgba(167, 38, 105, 0.741)), url(../mavdavis-img/muktano-main-incentive.png) no-repeat center;
     background-size: cover;
 }
 
