--- a/css/mavdavis-style.css
+++ b/css/mavdavis-style.css
@@ -6,7 +6,7 @@
 }
 
 .hero-head {
-    background-image: url(/mavdavis-img/hero-bg.png);
+    background-image: url(../mavdavis-img/hero-bg.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
