--- a/css/mavdavis-style.css
+++ b/css/mavdavis-style.css
@@ -6,7 +6,7 @@
 }
 
 .hero-head {
-    background-image: url(/mavdavis-img/hero-bg.png);
+    background-image: url(../mavdavis-img/hero-bg.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -19,4 +19,10 @@
 .left-section {
     width: 80%;
     margin: 0 auto;
+}
+
+@media (max-width: 800px) {
+   .energymuk {
+       display: block !important;
+   }
 }
